fixed alignment

--- a/src/modules/dashboard/components/Dialogs/EditExpenditureDialog/ChangedStreaming/NewTeam/NewTeam.css
+++ b/src/modules/dashboard/components/Dialogs/EditExpenditureDialog/ChangedStreaming/NewTeam/NewTeam.css
@@ -1,6 +1,6 @@
 .teamWrapper {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   padding: 11px 0 12px;
 }
 
