--- a/src/modules/dashboard/components/Dialogs/EditExpenditureDialog/NewRate/NewRate.css
+++ b/src/modules/dashboard/components/Dialogs/EditExpenditureDialog/NewRate/NewRate.css
@@ -11,3 +11,12 @@
   height: 16px;
   width: 16px;
 }
+
+.valueWrapper {
+  display: inline-flex;
+  align-items: center;
+}
+
+.valueWrapper > span {
+  margin-right: 4px;
+}
